# release_regent

./: .dockerignore  .gitignore  .release-regent.toml  .tech-decisions.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  catalog.config.yml  deny.toml  mkdocs.yml  release-regent.toml  renovate.json  tasks.md  temp_test.rs
.github/: merge-warden.toml
.github/instructions/: 001-general-repository.instructions.md  050-scm-repository.instructions.md  100-workflow-guidelines-repository.instructions.md  150-coding-repository.instructions.md  151-coding-markdown-repository.instructions.md  152-coding-rust-repository.instructions.md  153-coding-terraform-repository.instructions.md  general.instructions.md  markdown.instructions.md  rust.instructions.md  terraform.instructions.md
.github/scripts/: update_github_label_colors.ps1
.github/workflows/: ci.yml  claude-pr-review.yml  docs.yml  find_mutants_in_pr.yml  lint.yml  pr.yml  release.yml
crates/az_func/: Cargo.toml
crates/az_func/src/: errors.rs  errors_tests.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: errors.rs  errors_tests.rs  factory.rs  factory_tests.rs  main.rs  main_tests.rs  version_calculator.rs  version_calculator_tests.rs
crates/config_provider/: Cargo.toml
crates/config_provider/src/: builder.rs  builder_tests.rs  errors.rs  file_provider.rs  formats.rs  formats_tests.rs  github_provider.rs  github_provider_tests.rs  lib.rs  validation.rs  validation_tests.rs
crates/core/: Cargo.toml
crates/core/src/: changelog.rs  changelog_tests.rs  comment_command_processor.rs  comment_command_processor_tests.rs  config.rs  config_tests.rs  default_version_calculator.rs  default_version_calculator_tests.rs  errors.rs  errors_tests.rs  github_version_calculator.rs  github_version_calculator_tests.rs  lib.rs  lib_tests.rs  manifest.rs  manifest_tests.rs  pr_status_commenter.rs  pr_status_commenter_tests.rs  release_automator.rs  release_automator_tests.rs  release_orchestrator.rs  release_orchestrator_tests.rs  release_orchestrator_tracing_tests.rs  versioning.rs  versioning_tests.rs  webhook.rs  webhook_tests.rs
crates/core/src/traits/: configuration_provider.rs  event_source.rs  event_source_tests.rs  git_operations.rs  github_operations.rs  mod.rs  tests.rs  version_calculator.rs  webhook_validator.rs
crates/core/tests/: trait_contracts.rs
crates/github_client/: Cargo.toml  README.md  test_key.pem  test_key_public.pem
crates/github_client/src/: auth.rs  auth_backup.rs  auth_corrupted.rs  auth_tests.rs  errors.rs  errors_tests.rs  installation_tests.rs  lib.rs  lib_tests.rs  models.rs  models_tests.rs  pr_management.rs  pr_management_tests.rs  release.rs  release_tests.rs
crates/server/: Cargo.toml
crates/server/src/: errors.rs  errors_tests.rs  handler.rs  handler_tests.rs  main.rs  main_tests.rs
crates/testing/: Cargo.toml  README.md
crates/testing/src/: api.rs  lib.rs  lib_tests.rs
crates/testing/src/assertions/: behavior_verifier.rs  compliance_checker.rs  examples.rs  mod.rs  spec_runner.rs
crates/testing/src/builders/: commit_builder.rs  configuration_builder.rs  mod.rs  pull_request_builder.rs  release_builder.rs  repository_builder.rs  tag_builder.rs  version_builder.rs  version_context_builder.rs  webhook_builder.rs
crates/testing/src/fixtures/: github_api_fixtures.rs  mod.rs  webhook_fixtures.rs
crates/testing/src/mocks/: configuration_provider.rs  event_source.rs  event_source_tests.rs  github_operations.rs  github_operations_tests.rs  mod.rs  version_calculator.rs  webhook_validator.rs
crates/testing/src/utils/: mod.rs
docs/: README.md  architecture-refactor-proposal.md  cli-reference.md  configuration-reference.md  getting-started-guide.md  getting-started.md  github-app-setup.md  release-automation-guide.md  requirements.txt  tutorial.md  webhook-integration.md
docs/adr/: ADR-001-hexagonal-architecture.md  ADR-002-long-running-server-deployment-model.md  ADR-003-pr-comment-commands.md  ADR-004-bump-override-persistence.md  ADR-005-release-branch-ownership.md  ADR-006-github-sdk-bypass.md  ADR-007-enterprise-config-hierarchy.md  ADR-008-supply-chain-security-sbom-attestations.md
docs/catalog/: cli.md  config-provider.md  core.md  general.md  github-client.md  index.md  server.md  testing.md
docs/examples/: azure_function_integration.rs  test-webhook-integration.sh  webhook_processing_example.rs
docs/specs/: release-automation-spec.md
docs/specs/architecture/: overview.md
docs/specs/design/: error-handling.md
docs/specs/interfaces/: bump_override_implementation.md  github_operations_additions.md
docs/specs/operations/: configuration.md
docs/specs/requirements/: functional-requirements.md  non-functional-requirements.md  user-stories.md
docs/specs/testing/: behavioral-assertions.md  test-coverage.md
docs/user/: index.md
docs/user/explanation/: architecture.md  github-app-model.md  (+5 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_event_type_from_str.rs  fuzz_extract_changelog_from_pr_body.rs  fuzz_extract_version_from_branch.rs  fuzz_extract_version_from_pr.rs
fuzz/seeds/fuzz_event_type_from_str/: seed_comment_received  seed_pull_request_merged  seed_pull_request_opened  seed_pull_request_updated  seed_release_pr_merged
fuzz/seeds/fuzz_extract_changelog_from_pr_body/: seed_empty_body  seed_header_absent  seed_header_present
fuzz/seeds/fuzz_extract_version_from_branch/: seed_no_version_prefix  seed_non_release_branch  seed_valid_release
fuzz/seeds/fuzz_extract_version_from_pr/: seed_version_in_branch  seed_version_in_title
samples/: .env.example  README.md  create-test-repo.ps1  run-local.ps1
samples/config/: .release-regent.toml  global.toml  release-regent.toml
scripts/: README.md  requirements.txt  test_update_catalog.py  update_catalog.py
specs/: README.md  specification.md
specs/architecture/: overview.md
specs/design/: concurrency-control.md
specs/operations/: configuration.md
specs/requirements/: functional-requirements.md  user-stories.md
specs/testing/: behavioral-assertions.md  strategy.md
(+27 files in other folders)
