[workspace]
resolver = "2"
members = [
    "crates/github_client",
    "crates/core",
    "crates/cli",
    "crates/server",
    "crates/testing",
    "crates/config_provider",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Release Regent Contributors"]
license = "Apache-2.0"
homepage = "https://github.com/pvandervelde/release_regent"
repository = "https://github.com/pvandervelde/release_regent"

[workspace.dependencies]
# Core async and concurrency
async-trait = "0.1"
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# GitHub integration
github-bot-sdk = { git = "https://github.com/pvandervelde/github-bot-sdk", rev = "5ea985e" }
octocrab = "0.38"
reqwest = { version = "0.13", features = ["json", "rustls"] }

# Crypto and security
jsonwebtoken = "9.2"
secrecy = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Observability
opentelemetry = "0.30"
opentelemetry-jaeger = "0.22"
opentelemetry_sdk = "0.30"

# Azure
azure_identity = "0.31"
azure_security_keyvault_secrets = "0.10"

# Test dependencies
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.13"
pretty_assertions = "=1.4.1"
serial_test = "=3.2.0"
wiremock = "0.6"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Additional utilities
dirs = "5.0"
walkdir = "2.4"
jsonschema = "0.18"
once_cell = "1.19"
regex = "1.10"
rand = "0.8"
http = "1"
bytes = "1.0"

# Version calculation
git-conventional = "0.12"

# Web framework
axum = "0.8"
hyper = "1.6"
