[package]
name = "release-regent-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Command-line interface for Release Regent"

[[bin]]
name = "rr"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI dependencies
clap = { workspace = true }

# Release Regent dependencies
release-regent-core = { workspace = true }
release-regent-github-client = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
