[package]
name = "release-regent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core business logic for Release Regent"

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
git-conventional = "0.12"
git-cliff-core = { version = "2.9", default-features = false, features = [
    "repo",
] }
toml = "0.9"

# GitHub client
release-regent-github-client = { path = "../github_client" }

[dev-dependencies]
tokio-test = { workspace = true }
