[package]
name = "release-regent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core business logic for Release Regent"

[dependencies]
# Core dependencies
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
git-conventional = { workspace = true }
git-cliff-core = { version = "2.12", default-features = false, features = [
    "repo",
] }
toml = { workspace = true }
toml_edit = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tracing-test = { workspace = true }
release_regent_testing = { path = "../testing" }
