[package]
name = "release-regent-github-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "GitHub API client for Release Regent"

[dependencies]
# Core dependencies
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# GitHub integration - using github-bot-sdk
github-bot-sdk = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

release-regent-core = { path = "../core" }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }
chrono = { workspace = true }
