[package]
name = "release-regent-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Web server host for Release Regent webhook processing"

[[bin]]
name = "rr-server"
path = "src/main.rs"

[dependencies]
# Core dependencies
async-trait = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# Web server dependencies
axum = { workspace = true }
hyper = { workspace = true }

# Azure integration
azure_identity = { workspace = true }
azure_security_keyvault_secrets = { workspace = true }

# GitHub SDK
github-bot-sdk = { workspace = true }

# Release Regent dependencies
release-regent-core = { path = "../core" }
release-regent-github-client = { path = "../github_client" }

[dev-dependencies]
tokio-test = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
