[package]
name = "release_regent_testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Testing infrastructure and mock implementations for Release Regent"
readme = "README.md"

[dependencies]
# Core dependencies for trait implementations
release-regent-core = { path = "../core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Testing framework dependencies
tokio = { workspace = true }
tempfile = { workspace = true }

# Mock data generation
fake = { version = "4.0", features = [
    "derive",
    "chrono",
    "uuid",
], optional = true }
rand = { workspace = true }

# HTTP mocking for GitHub API simulation
wiremock = { workspace = true }
reqwest = { workspace = true }

# Webhook payload handling
http = { workspace = true }
bytes = { workspace = true }

# Logging for test debugging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Additional testing utilities
pretty_assertions = { workspace = true }
serial_test = { workspace = true }

[features]
default = []
# Feature for enabling test-only functionality
test-utils = []
# Feature for enabling mock builders
mock-builders = ["fake"]
